// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Charts /> should render properly for "Facet" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <ChartFacet
        chart={
          Object {
            "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
            "type": "facet",
          }
        }
        chartIndex={0}
        dispatch={[Function]}
      />
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Histogram" 1`] = `
.emotion-29 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-28 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-27 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-0 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-1 {
  height: 24px;
}

.emotion-11 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-2 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-10 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-9 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-9:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-8 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-7 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-5 {
  padding: 4px;
}

.emotion-4 {
  width: 100%;
  padding: 12px 8px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  border: 2px solid transparent;
}

.emotion-4:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-6 {
  padding: 8px;
}

.emotion-15 {
  color: #b3b3b3;
}

.emotion-14 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-13 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 300px;
  height: 40px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  padding-left: 12px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right 8px top 50%;
  background-size: 20px;
}

.emotion-16 {
  height: 16px;
}

.emotion-20 {
  padding-top: 8px;
}

.emotion-17 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-19 {
  position: relative;
}

.emotion-18 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-18:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-18:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #808080;
}

.emotion-22:hover {
  background-color: #b3b3b3;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-23 {
  width: 8px;
}

.emotion-24 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-24:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-24,
.emotion-24:hover,
.emotion-24:visited {
  background-color: #73b61c;
}

.emotion-24:hover {
  background-color: #96c955;
}

.emotion-24[aria-disabled=true] {
  background-color: #808080;
}

<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <div
        className="emotion-29"
      >
        <div
          className="emotion-28"
        >
          <div
            className="emotion-27"
          >
            <form
              action=""
              className="emotion-26"
              method="post"
              onSubmit={[Function]}
            >
              <h2
                className="emotion-0"
              >
                Histogram
                 Visualization
              </h2>
              <div
                className="emotion-1"
              />
              <label
                className="emotion-11"
              >
                <div
                  className="emotion-2"
                >
                  Metadata Type
                </div>
                <ListboxInput
                  className="emotion-10"
                  defaultValue=""
                  onChange={[Function]}
                >
                  <ListboxButton
                    arrow={
                      <Unknown
                        color="#ffffff"
                        height={20}
                      />
                    }
                    className="emotion-3"
                  >
                    Select Type
                  </ListboxButton>
                  <ListboxPopover
                    className="emotion-9"
                  >
                    <div
                      className="emotion-8"
                    >
                      <div
                        className="emotion-7"
                      >
                        <div
                          className="emotion-5"
                        >
                          <input
                            aria-label="Filter options"
                            className="emotion-4"
                            onChange={[Function]}
                            type="search"
                            value=""
                          />
                        </div>
                        <div
                          className="emotion-6"
                        >
                          No Results
                        </div>
                      </div>
                    </div>
                  </ListboxPopover>
                </ListboxInput>
              </label>
              <div
                className="emotion-1"
              />
              <label
                className="emotion-15"
              >
                Select the histogram type
                <div
                  className="emotion-14"
                >
                  <select
                    className="emotion-13"
                    defaultValue="absolute"
                    disabled={false}
                    onChange={[Function]}
                  >
                    <option
                      disabled={true}
                      value=""
                    >
                      Select an option...
                    </option>
                    <option
                      value="absolute"
                    >
                      Absolute
                    </option>
                    <option
                      value="relative"
                    >
                      Relative
                    </option>
                  </select>
                </div>
              </label>
              <div
                className="emotion-16"
              />
              <div
                className="emotion-20"
              >
                <label
                  className="emotion-17"
                  htmlFor="values"
                >
                  Number of Values Shown
                </label>
                <div
                  className="emotion-19"
                >
                  <input
                    className="emotion-18"
                    disabled={false}
                    id="values"
                    name="values"
                    onChange={[Function]}
                    type="number"
                    value="10"
                  />
                </div>
                <div
                  className="emotion-20"
                >
                   
                </div>
              </div>
              <div
                className="emotion-25"
              >
                <button
                  className="emotion-22"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <div
                  className="emotion-23"
                />
                <button
                  aria-disabled={true}
                  className="emotion-24"
                  onClick={[Function]}
                  type="submit"
                >
                  Save Visualization
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Range" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <ChartRange
        chart={
          Object {
            "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
            "type": "range",
          }
        }
        chartIndex={0}
        dispatch={[Function]}
      />
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Unknown" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  />
</div>
`;
